2000-09-30  Willem Jan Palenstijn <palenstijn@wanadoo.nl>

	* exult.cc, usecode.cc: location marker on map changed to yellow
	* exult.cc, drag.cc: added 'hack-mover' cheat (can move _anything_)

2000-09-29  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
	
	* actors.cc: fixed bug in godmode: poison/hunger do no damage in GM now
	* bodies.cc: added/changed body shape/frames (from Jackchaos forum)

2000-09-28  Jeff Freedman  <jeff@amy.nerble.net>

	* objs.cc: Explosions do damage.

2000-09-27  Jeff Freedman  <jeff@amy.nerble.net>

	* usecode.cc,effects.cc: Showing explosions.

2000-09-24  Jeff Freedman  <jeff@amy.nerble.net>

	* Check for dying in 'set_properties()'.

2000-09-18  Jeff Freedman  <jeff@amy.nerble.net>

	* actors.cc (Actor): Trying to speed up followers.

2000-09-17  Jeff Freedman  <jeff@amy.nerble.net>

	* Got all the way through Forge, and banished Dark Core!
	* drag.cc: Dropping works.
	* usecode.cc: Can forge Black Sword (but Love test broken).

2000-09-16  Jeff Freedman  <jeff@amy.nerble.net>

	* gamewin.cc: Improved conversation rendering.

2000-09-14  Jeff Freedman  <jeff@amy.nerble.net>

	* effects.cc (Projectile_effect): Missile eggs pretty-much done.

2000-09-12  Tristan Tarrant  <nadir@users.sourceforge.net>

	* tools/u7shpload.c: Load 8x8 tiles (no save). Still crashes on some 
	shapes (fonts???)
	* data/black_gate.shp, data/serpent_isle.shp: Menu entries for the two
	games
	* data/Makefile.am: add above to build

2000-09-09  Tristan Tarrant  <nadir@users.sourceforge.net>

	* Makefile.am: Add EXULT_DATADIR to the defines
	* Makefile.win32: Try to do the same for Win32
	* exult.cc: default directory for <DATA> files is now EXULT_DATADIR
	* exult.spec.in: Install data files in the appropriate place,
	learnt how a spec file actually works :-)
	* data/Makefile.am: fiddle with rules to install exult.flx in the
	correct place, and get rpm -tb working

2000-09-09  Jeff Freedman  <jeff@amy.nerble.net>

	* Light spells (glimmer, etc.) work now.